[Improve][Connector-V2] RocketMQ Source add message tag config

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-rocketmq-e2e/src/test/resources/rocketmq-source_text_error_tag_to_console.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-rocketmq-e2e/src/test/resources/rocketmq-source_text_error_tag_to_console.conf
@@ -34,7 +34,7 @@ source {
   Rocketmq {
     plugin_output = "rocketmq_table"
     name.srv.addr = "rocketmq-e2e:9876"
-    topics = "test_topic_text_tag"
+    topics = "test_topic_text_error_tag"
     format = text
     # The default field delimiter is ","
     field_delimiter = ","
@@ -71,23 +71,11 @@ sink {
       row_rules = [
         {
           rule_type = MIN_ROW
-          rule_value = 1
+          rule_value = 0
         },
         {
           rule_type = MAX_ROW
-          rule_value = 1
-        }
-      ],
-      field_rules = [
-        {
-          field_name = c_string
-          field_type = string
-          field_value = [
-            {
-              rule_type = NOT_NULL
-              equals_to = "string"
-            }
-          ]
+          rule_value = 0
         }
       ]
     }
