[Improve][Connector-V2] RocketMQ Source add message tag config

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-rocketmq-e2e/src/test/resources/rocketmq-source_text_error_tag_to_console.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-rocketmq-e2e/src/test/resources/rocketmq-source_text_error_tag_to_console.conf
@@ -38,7 +38,7 @@ source {
     format = text
     # The default field delimiter is ","
     field_delimiter = ","
-    tags = "test_tag"
+    tags = "error_tag_test"
     schema = {
       fields {
         id = bigint
@@ -70,11 +70,11 @@ sink {
     rules = {
       row_rules = [
         {
-          rule_type = MAX_ROW
+          rule_type = MIN_ROW
           rule_value = 0
         },
         {
-          rule_type = MIN_ROW
+          rule_type = MAX_ROW
           rule_value = 0
         }
       ]
