[Improve][Connector-V2] RocketMQ Source add message tag config

--- a/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-rocketmq-e2e/src/test/resources/rocketmq-source_text_error_tag_to_console.conf
+++ b/seatunnel-e2e/seatunnel-connector-v2-e2e/connector-rocketmq-e2e/src/test/resources/rocketmq-source_text_error_tag_to_console.conf
@@ -68,14 +68,15 @@ sink {
   Assert {
     plugin_input = "rocketmq_table"
     rules = {
-      row_rules = [
+      field_rules = [
         {
-          rule_type = MIN_ROW
-          rule_value = 0
-        },
-        {
-          rule_type = MAX_ROW
-          rule_value = 0
+          field_name = c_string
+          field_type = string
+          field_value = [
+            {
+              rule_type = NULL
+            }
+          ]
         }
       ]
     }
